@@ -272,7 +272,9 @@
               svn co svn://svn.dre.vanderbilt.edu/DOC/Middleware/tags/ACE+TAO+CIAO-X_Y_Z/TAO
               ACE_wrappers/TAO<br>
               svn co svn://svn.dre.vanderbilt.edu/DOC/Middleware/tags/ACE+TAO+CIAO-X_Y_Z/CIAO
-              ACE_wrappers/TAO/CIAO </code>
+              ACE_wrappers/TAO/CIAO<br>
+              svn co svn://svn.dre.vanderbilt.edu/DOC/Middleware/tags/ACE+TAO+CIAO-X_Y_Z/DAnCE
+              ACE_wrappers/TAO/DAnCE</code>
           </li>
           <li>Change to the ACE_wrappers directory using <br>
           cd ACE_wrappers</li>
@@ -306,6 +308,8 @@
               ACE_wrappers/TAO<br>
               svn co svn://svn.dre.vanderbilt.edu/DOC/Middleware/tags/ACE+TAO+CIAO-X_Y_Z/CIAO
               ACE_wrappers/TAO/CIAO<br>
+              svn co svn://svn.dre.vanderbilt.edu/DOC/Middleware/tags/ACE+TAO+CIAO-X_Y_Z/DAnCE
+              ACE_wrappers/TAO/DAnCE<br>
         cd ACE_wrappers<br>
         export ACE_ROOT=$PWD<br>
         nohup $ACE_ROOT/bin/generate_rel_manpages &<br>
