@@ -1,3 +1,11 @@
+Thu Sep 30 10:49:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * debian/mpc-ace.install:
+          Improved
+
+        * docs/bczar/bczar.html:
+          Added DAnCE to doxygen instructions
+
 Thu Sep 30 08:09:34 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/IOStream.h:
